[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/actor_green.png" type="Texture" id=1]
[ext_resource path="res://src/player.gd" type="Script" id=2]
[ext_resource path="res://src/player_melee.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 8 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="melee" type="Area2D" parent="."]
position = Vector2( 48, 0 )
script = ExtResource( 3 )

[node name="attack_line" type="Line2D" parent="melee"]
position = Vector2( -48, 0 )
points = PoolVector2Array( 0, 0, 96, 0 )
width = 6.0
default_color = Color( 1, 1, 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="melee"]
shape = SubResource( 2 )
[connection signal="body_entered" from="melee" to="." method="_on_melee_body_entered"]
